--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,22 @@ git@heroku.com:growing-mist-751.git
 TODO:
 FIXME:   
 CHANGED:  
+Video Genie 249 small business
+
+Increase Conversion, Engagement and loyalty
+
+Because everyone has a phone
+Make your references work for you
+Bringing trust to the internet
+RIP 2011: The reference letter
+The reference letter: Evolved to sell.
+Reviews by real people: I am not a robot
+References that sell
+Increase Conversion 50%                 
+Real People, Real Trust. With 3 reviews we can do what takes Yelp 300.
+Word of mouth with unlimited bandwidth.
+Linkedin is a black hole. Free your references.                                       
+Professional, portable word of mouth. 
 
 Tasks 
 x Make javascript widget work   
@@ -46,6 +62,10 @@ x Prevent people from deleting user account (_full_lanyard fails on user delete)
 x Make embed's auto resize
   x slider version
   x regular version
+x vouch.com/ user/sites/remoteurls
+x vouch.com/
+x user has many sites
+x user
 x Give css unique ID's to prevent interference
   x change all css to .avouch-css-class from .class
   - Make sure clear files clear everything / Figure out how to keep css separate
@@ -53,36 +73,75 @@ x Give css unique ID's to prevent interference
     x slider
   x regular: Use class based reset(finish this up and standardize to slider) 
 - Make JS/JQuery non-conflict with parent pages  
-! Make permalinks work for site model
-   - No spaces allowed when creating site
-% Current method of creating Remoteurls
-  - Finds IFRAME SHOW /remoteurl/"sight id no spaces" (in permalink field) if can't find it, it creates permalink "sight_id_no_spaces" and redirects to permalink
-  - Display ""
-! Create "banner" version  
-    x Design mockup banner
-    - Create banner_Embed.js
-    - Create _banner_full_lanyard
-    - Create banner_embed layout
-    - Create banner_embed test frame
 
-! Add regex cleaning and authentication
+x Use UUID permalinks for site model   1 day
+   x No spaces allowed when creating site
+
+! Create "banner" version    1 day
+   x Design mockup banner
+   - Create banner_Embed.js
+   - Create _banner_full_lanyard
+   - Create banner_embed layout
+   - Create banner_embed test frame
+
+! Create user Dashboard
+  - Root page should be static page w/ no info + login
+      ? Homepage/Sales page
+  - Dashboard should be separate w/ moderation, installation, administration
+    - Moderation > List of user's sites recordings w/ ability to publish/unpublish
+    - Administration > Edit Profile, Add paid service
+    - Install > Install intructions
+      - Add new site (redirect to install)
+      - If no sites owned by user redirect
+
+  - Create account
+  - Create first site
+  x Embed code
+  - Buy accounts
+  - List of your recordings
+  - List of your sites recordings publish/unpublish
+  x Turn setting on and off (check boxes?)
+
+! Add regex cleaning and authentication  1 day
   - signup: clean name on new user account
   - signup: require phone #
-- Create VAR url > in embed code so a domain can tag multiple index.html pages
+  - create site add regex lines that delete anything before www. or http:// 
+
+
+
 % Create simple sales page (ala freshdesk)
   - home, tour, pricing, signup, blog, about, support
   - static example review
-% Create user Dashboard       
+   
 % Get with john on launch/redis
 - Add ability to add auth models from settings popup 
 - Add linkedin login
 - Add share / like popups           
 % Prevent crossdomain tomfoolery: Parse url using javascript to determine url matches id, create whitelist feature 
 
+
 ? Add multiple social logins during second step of registration
 ? Create admin users with separate registration requirements
+
+Kind of needed for launch
+  % Current method of creating Remoteurls
+    - Render Controller_Lanyard > Embed ?siteid/"site id no spaces"
+        - CREATE iframe FINDS "site id no spaces" in Controller_RemoteUrl > SHOW if can't find it, it creates permalink "site_id_no_spaces" and redirects to permalink
+        - Render _full_lanyard > shared/_recording find_by_permalink/"site id no spaces"
+        ! To get these sync'ed up I would need to make_"var remoteurl_id"_into_permalink_slug in javascript prior to passing into _embed.js's full_lanyard   
+  ! OR I can switch to permalink in lanyard_controller > EMBED
+
       
 Not needed for launch
+  % Enter email address > Email's access digits to email address + Confirmation of Info > Call number > Enter Pin # 
+    % On email > DB table links > RemoteURL.id > Email Address > Name > Company > Pin # > Unpublished
+    % Call number, enter PIN # > Twilio Links data from incoming PIN, updates recording record > Saves records
+    - twilio rcvs call, request callinstructions.xml.erb > IT says enter 4 digits then # > sends to authconfirmed?.xml.erb
+    - authconfirmed?.xml.erb checks DB for matching 4 digits in PIN column IF found > Record > Save > Update recordings table
+    - If not found, disconnect after second attempt
+    - helpful example http://www.twilio.com/docs/howto/weatherbyphone
+    
+  - auto increment site.permalink in case of duplicates  
   - Save css into field per site       
   ! Make logout happen within iframe (nopopup required)
   - Allow code based invite for high-profile People/Email addresses
@@ -92,76 +151,80 @@ Not needed for launch
   ?	Pair javascript/partial to list items and poll/push refresh them
   ? Let each site have its own list of required fields
   ? Semi anonymous posting
+
+
+
 Long term
  smartphone app
  resume site
  
-#	Turn site/1/remoteurl/1 into the primary iframe
-#	  Unloggedin state
-#    	show.html > logged out
-#    	  click to popup login > done
-#    	  login to leave your review > done
-#  	  show.html > logged in
-#        click to logout
-#        example review
-#        start review button
-#  Make site/1/remoteurl/1/reviews display on plugin
-#    display remoteurl/1/reviews/index 
-#	create all routes/pages on rails
-#	head
-#		log in
-#		start post page
-#		edit post settings 
-#	list                
-#		All reviews
-#  	vouch.com/site/17/page/12?layout=embed&version=forum 
-#		Single review
-#		vouch.com/site/17/page/12/post/32?layout=embed&version=forum
+Stuff I Should Probably Delete
+  #	Turn site/1/remoteurl/1 into the primary iframe
+  #	  Unloggedin state
+  #    	show.html > logged out
+  #    	  click to popup login > done
+  #    	  login to leave your review > done
+  #  	  show.html > logged in
+  #        click to logout
+  #        example review
+  #        start review button
+  #  Make site/1/remoteurl/1/reviews display on plugin
+  #    display remoteurl/1/reviews/index 
+  #	create all routes/pages on rails
+  #	head
+  #		log in
+  #		start post page
+  #		edit post settings 
+  #	list                
+  #		All reviews
+  #  	vouch.com/site/17/page/12?layout=embed&version=forum 
+  #		Single review
+  #		vouch.com/site/17/page/12/post/32?layout=embed&version=forum
 
-# Structure
-#  div > replace > vouchframe > OnTrigger reload
-#  iframe > Login, Submit review > Click to login           
-#  div:replace > vouch reviews > poll for changes
-#  load partial w/ reviews
-# 
-# 
-# Current    
-# frame .html
-#  gets embed.js
-#    has JS code
-#    gets full_lanyard passes version type
-#      full_lanyard processes version type & shows static iframe auth?layout=embed link 
-#        login opens window trying to access protected "closewindow" page
-#    find/replaces div sw_3 with content from full_lanyard      
-# 
-# New    
-# frame .html
-#  gets embed.js
-#    has JS code
-# 1.  gets full_lanyard passes site.id, remoteurl.id, layout?=type
-#      full_lanyard processes version type & shows static iframe auth?layout=embed link 
-#        login opens window trying to access protected "closewindow" page
-#    find/replaces div sw_3 with content from full_lanyard
-# 2.  gets site.id/remoteurl.id/reviews, layout?=type
-#    find/replaces div "something" with content from reviews
-# 
-# 
-#    
-# 
-# DOM
-# -Load Widget w/ javascript
-# -Load popup window
-# -First registration > Add relevant info (email address)
-# -After successful login 
-# - Callback should change on page DOM to Logout / Start Review
-# - Callback should close iframe   
-# 
-#   
-# //Code for permalinks:
-# //Site.all.each do |c|
-#   match "#{c.permalink}/edit" => 'sites#edit', :permalink => c.permalink 
-#   match "#{c.permalink}(/:site)" => 'sites#show', :permalink => c.permalink
-# end
-# 
-# //Site.find_by_permalink(params[:permalink]) 
+  # Structure
+  #  div > replace > vouchframe > OnTrigger reload
+  #  iframe > Login, Submit review > Click to login           
+  #  div:replace > vouch reviews > poll for changes
+  #  load partial w/ reviews
+  # 
+  # 
+  # Current    
+  # frame .html
+  #  gets embed.js
+  #    has JS code
+  #    gets full_lanyard passes version type
+  #      full_lanyard processes version type & shows static iframe auth?layout=embed link 
+  #        login opens window trying to access protected "closewindow" page
+  #    find/replaces div sw_3 with content from full_lanyard      
+  # 
+  # New    
+  # frame .html
+  #  gets embed.js
+  #    has JS code
+  # 1.  gets full_lanyard passes site.id, remoteurl.id, layout?=type
+  #      full_lanyard processes version type & shows static iframe auth?layout=embed link 
+  #        login opens window trying to access protected "closewindow" page
+  #    find/replaces div sw_3 with content from full_lanyard
+  # 2.  gets site.id/remoteurl.id/reviews, layout?=type
+  #    find/replaces div "something" with content from reviews
+  # 
+  # 
+  #    
+  # 
+  # DOM
+  # -Load Widget w/ javascript
+  # -Load popup window
+  # -First registration > Add relevant info (email address)
+  # -After successful login 
+  # - Callback should change on page DOM to Logout / Start Review
+  # - Callback should close iframe   
+  # 
+  #   
+  # //Code for permalinks:
+  # //Site.all.each do |c|
+  #   match "#{c.permalink}/edit" => 'sites#edit', :permalink => c.permalink 
+  #   match "#{c.permalink}(/:site)" => 'sites#show', :permalink => c.permalink
+  # end
+  # 
+  # //Site.find_by_permalink(params[:permalink]) 
 
